# general-validator

./: CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  usage.py
scripts/: README.md  RELEASE_AUTOMATION.md  release.py  release.sh  setup-poetry.sh
src/data_checker/: __init__.py  checker.py
src/general_validator/: __init__.py  checker.py  logger.py
tests/: cursor.md  validator.py  validator_usage.py  专用函数日志演示.py  列表批量校验示例.py  基础使用示例1.py  基础使用示例2.py  基础使用示例3.py  数值校验-智能类型转换示例.py  日志级别演示.py  条件校验-批量示例.py  条件校验示例.py  类型校验示例.py  链式调用测试.py  长度校验示例.py
