[project]
name = "general-validator"
version = "1.0.0"
description = "General-Validator is a universal batch data validator."
authors = [
    {name = "Devin",email = "zhangchuzhao@dingtalk.com"}
]
readme = "README.md"
homepage = "https://github.com/zhuifengshen/general-validator"
repository = "https://github.com/zhuifengshen/general-validator"
documentation = "https://github.com/zhuifengshen/general-validator"
license = {file = "LICENSE"}
requires-python = ">=3.6"
dependencies = [
    "colorama (==0.4.1)",
    "colorlog (==4.0.2)"
]

[tool.poetry]
packages = [{include = "general_validator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
